# operating-systems

./: .gitignore  CMakeLists.txt  README.md
cw01/: README.md
cw01/zad1/: diffLib.c  diffLib.h  makefile
cw01/zad2/: main.c  makefile  raport2.txt
cw01/zad3a/: comment.txt  makefile
cw01/zad3b/: comment.txt  makefile
cw02/: README.md
cw02/zad1/: io_lib.c  io_lib.h  main.c  makefile  wnioski.txt  wyniki.txt
cw02/zad2/: find.c  find_lib.c  find_lib.h  find_nftw.c  makefile
cw03/: README.md
cw03/zad1/: find.c  makefile
cw03/zad2/: lista.txt  macierz.c  macierz_in1.txt  macierz_in2.txt  macierz_in3.txt  macierz_in4.txt  makefile  matrix.py  tester.c
cw03/zad3/: generator.c  macierz.c  macierz.c.bak  makefile
cw04/: README.md
cw04/zad1/: main.c
cw04/zad2/: main.c  makefile  raport2.txt  tester.c
cw04/zad3/: main  main.c  makefile
cw04/zad4a/: catcher.c  sender.c
cw04/zad4b/: catcher.c  common.h  makefile  sender.c
cw05/: README.md
cw05/zad1/: main.c  makefile  params.txt
cw05/zad2/: main.c  makefile  params.txt
cw05/zad3/: consumer.c  in1.txt  in2.txt  in4.txt  in5.txt  makefile  out.txt  params.txt  producer.c  runner.c
cw06/: README.md
cw06/zad1/: client.c  common.h  makefile  server.c
cw06/zad2/: client.c  common.h  makefile  server.c
cw07/: README.md
cw07/zad1/: common.h  makefile  starter.c  worker1.c  worker2.c  worker3.c
cw07/zad2/: common.h  makefile  starter.c  worker1.c  worker2.c  worker3.c
cw08/: README.md
cw08/zad1/: main  (+3 more)
cw09/: README.md
kolos1/: kolos1.c
kolosy/: kolos1.c  kolos2.c
packer/: makefile
(+92 files in other folders)
